apply code review fixes